// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> with \`big\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 BjTZr"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 jkswGe"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 dLJOgs"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`checkedColor\` \`defaultColor\` & \`disabledColor\` props matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 BjTZr"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 iMBSvq"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 eiYMEb"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 exqVgo"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 jkswGe"
    disabled={true}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 cTLuDX"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isChecked\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 BjTZr"
>
  <button
    aria-label={null}
    aria-pressed={true}
    className="toggle-switch__StyledSwitch-ski4b0-1 jkswGe"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 cTLuDX"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isLabelVisible\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 BjTZr"
>
  <button
    aria-label="switch"
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 jkswGe"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`<ToggleSwitch /> with \`label\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 BjTZr"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 jkswGe"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 cTLuDX"
    for="toggle-switch"
  >
    A test label
  </label>
</div>
`;

exports[`<ToggleSwitch /> with default props matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 BjTZr"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 jkswGe"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 cTLuDX"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;
